tests/snapshots/volcano/q05.snap
---
source: tests/explain_snapshots.rs
description: "-- redundancy bait: double negation + duplicate conjunct (P1 pass 4)\nSELECT l_orderkey, l_quantity\nFROM lineitem\nWHERE NOT (NOT (l_quantity > 45)) AND l_quantity > 45"
expression: rendered
---
ProjectPhys [#0.0, #0.3]
  FilterPhys (#0.3 > 45)
    ProjectPhys [#0.0, #0.3]
      ScanPhys #0
