tests/snapshots/volcano/q06.snap
---
source: tests/explain_snapshots.rs
description: "-- explicit INNER JOIN ... ON: binds to a real equi-join even at P0\nSELECT c_name, o_orderkey, o_totalprice\nFROM customer INNER JOIN orders ON c_custkey = o_custkey\nWHERE o_totalprice > 50000.0"
expression: rendered
---
ProjectPhys [#0.1, #1.0, #1.3]
  HashJoinPhys on=[#0.0 = #1.1] (build, probe)
    ProjectPhys [#0.0, #0.1]
      ScanPhys #0
    FilterPhys (#1.3 > 50000.0)
      ProjectPhys [#1.0, #1.1, #1.3]
        ScanPhys #1
