tests/snapshots/volcano/q08.snap
---
source: tests/explain_snapshots.rs
description: "-- explicit join with a selective dimension filter\nSELECT p_name, l_extendedprice\nFROM part INNER JOIN lineitem ON p_partkey = l_partkey\nWHERE p_brand = 'Brand#23'"
expression: rendered
---
ProjectPhys [#0.1, #1.4]
  HashJoinPhys on=[#0.0 = #1.1] (build, probe)
    FilterPhys (#0.2 = 'Brand#23')
      ProjectPhys [#0.0, #0.1, #0.2]
        ScanPhys #0
    ProjectPhys [#1.1, #1.4]
      ScanPhys #1
