tests/snapshots/volcano/q11.snap
---
source: tests/explain_snapshots.rs
description: "-- 3-way comma-join, biggest table listed first (bad textual order)\nSELECT c_name, o_orderkey, l_quantity\nFROM lineitem, customer, orders\nWHERE c_custkey = o_custkey\n  AND o_orderkey = l_orderkey\n  AND c_nationkey = 3"
expression: rendered
---
ProjectPhys [#1.1, #2.0, #0.3]
  HashJoinPhys on=[#0.0 = #2.0] (build, probe)
    HashJoinPhys on=[#1.0 = #2.1] (build, probe)
      FilterPhys (#1.2 = 3)
        ProjectPhys [#1.0, #1.1, #1.2]
          ScanPhys #1
      ProjectPhys [#2.0, #2.1]
        ScanPhys #2
    ProjectPhys [#0.0, #0.3]
      ScanPhys #0
