tests/snapshots/volcano/q12.snap
---
source: tests/explain_snapshots.rs
description: "-- 3-way chain; the selective filter sits on the middle-listed table\nSELECT p_name, l_quantity, o_orderdate\nFROM lineitem, part, orders\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND p_size = 41"
expression: rendered
---
ProjectPhys [#1.1, #0.3, #2.4]
  HashJoinPhys on=[#0.0 = #2.0] (build, probe)
    HashJoinPhys on=[#0.1 = #1.0] (build, probe)
      FilterPhys (#1.3 = 41)
        ProjectPhys [#1.0, #1.1, #1.3]
          ScanPhys #1
      ProjectPhys [#0.0, #0.1, #0.3]
        ScanPhys #0
    ProjectPhys [#2.0, #2.4]
      ScanPhys #2
